[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0"]


[project]
name = "nexusravenv2utils"
description = "A utility library for NexusRavenV2"
authors = [
    {name = "osoken"},
]
dynamic = [
    "version", 
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: Japanese",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
]

[project.urls]
Source = "https://github.com/osoekawaitlab/nexus-raven-v2-utils"

[tool.setuptools]
packages=["nexusravenv2utils"]

[tool.setuptools.package-data]
nexusravenv2utils = ["py.typed"]

[project.optional-dependencies]
dev=[
    "black",
    "flake8",
    "pyproject-flake8",
    "pytest",
    "mypy",
    "tox",
    "isort",
    "pytest-mock",
    "pytest-cov",
]


[tool.pytest.ini_options]
addopts = ["-sv", "--doctest-modules", "--cov=nexusravenv2utils", "--cov-report=xml", "--cov-report=term-missing"]
testpaths = ["tests", "nexusravenv2utils"]
filterwarnings = [
    "error",
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.flake8]
max-line-length = 120
extend-ignore = "E203, E701"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pydantic.mypy]
init_typed = true

[tool.isort]
profile = "black"

[tool.tox]
legacy_tox_ini = """
    [tox]
    skipsdist = true
    envlist = py310

    [testenv]
    deps =
        -e .[dev]
    commands = 
        black nexusravenv2utils tests
        isort nexusravenv2utils tests
        pytest
        pflake8 nexusravenv2utils/ tests/
        mypy nexusravenv2utils --strict
        mypy tests --strict
"""
